#
# Copyright (C) Mellanox Technologies Ltd. 2020.  ALL RIGHTS RESERVED.
#

sources =          \
	cl_basic.h     \
	cl_basic_lib.c

libucc_cl_basic_la_SOURCES =$(sources)
libucc_cl_basic_la_CPPFLAGS = $(AM_CPPFLAGS)
libucc_cl_basic_la_LDFLAGS = -version-info $(SOVERSION) --as-needed

pkglib_LTLIBRARIES = libucc_cl_basic.la
